upgrade idea note